<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Converter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Tiitle2">bender the best</string>
    <string name="First_text">Please select item</string>

    <string name="Basic_button_weight">Weight</string>
    <string name="Basic_button_length">Length and Dist.</string>
    <!--<string name="Basic_button_Distance">Distance</string>-->
    <string name="Basic_button_volume">Volume</string>
    <string name="Basic_button_square">Square</string>
    <string name="Basic_button_speed">Speed</string>
    <string name="Basic_button_temperature">Temperature</string>

    <string name="frag1_text">Fragment 1</string>

    <string-array name="spinner">
        <item>Basic</item>
        <item>Special</item>
        <item>Engineering</item>
    </string-array>

    <!--Button name for special item-->
    <string name="button_fuel">Fuel consumption</string>
    <string name="button_cookery">Cookery</string>
    <string name="button_prices_for_products">Prices for products</string>
    <string name="button_Weight_volume">Weight / volume</string>
    <string name="button_fractions_and_percentages">Fractions and percentages</string>
    <string name="button_rate_of_exchange">Rate of exchange</string>

    <!--Button name for engineering item-->
    <string name="button_time">Time</string>
    <string name="button_acceleration">Acceleration</string>
    <string name="button_density">Density</string>
    <string name="abc">Text button on click</string>

    <!--Button name for Time_calculation item-->
    <string name="button_nanosecond">Nanosecond</string>
    <string name="button_microsecond">Microsecond</string>
    <string name="button_millisecond">Millisecond</string>
    <string name="button_second">Second</string>
    <string name="button_minute">Minute</string>
    <string name="button_hour">Hour</string>
    <string name="button_day">Day</string>
    <string name="button_week">Week</string>
    <string name="button_year">Year</string>
    <string name="button_century">Century</string>
    <string name="button_millennium">Millennium</string>
    <string name="button_clean">Clean</string>
    <string name="text_time">Enter the number</string>

    <!--Strings for weight_calculation-->
    <string name="button_gram">Gram</string>
    <string name="button_kilogram">Kilogram</string>
    <string name="button_miligram">Milligram</string>

</resources>
