<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:text="@string/text_time"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_clean"
                android:id="@+id/buttonClean"
                android:enabled="false"/>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_nanosecond"
                    android:id="@+id/buttonNanosecond"
                    android:enabled="false"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextNanosecond"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_microsecond"
                    android:id="@+id/buttonMicrosecond"
                    android:enabled="false"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextMicrosecond"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_millisecond"
                    android:id="@+id/buttonMillisecond"
                    android:enabled="false"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextMillisecond"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>

</ScrollView>