<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_gram"
                    android:id="@+id/buttonGram"
                    android:enabled="false"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextWeight"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_kilogram"
                    android:id="@+id/buttonKiloGram"
                    android:enabled="false"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextWeightKilogram"
                    android:layout_weight="1"/>
                </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_miligram"
                    android:id="@+id/buttonMiligram"
                    android:enabled="false"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextWeightMiligram"
                    android:layout_weight="1"/>
                </LinearLayout>

        </LinearLayout>
</ScrollView>